<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_40"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_60"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gridContainer"
        app:layout_constraintRight_toRightOf="parent" />

    <GridLayout
        android:id="@+id/gridContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonClear"
            style="@style/CalculatorButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_clear" />

        <Button
            android:id="@+id/buttonModulus"
            style="@style/CalculatorButton"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_modulus" />

        <Button
            android:id="@+id/buttonDivision"
            style="@style/CalculatorButton"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_division" />

        <Button
            android:id="@+id/button7"
            style="@style/CalculatorButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_seven" />

        <Button
            android:id="@+id/button8"
            style="@style/CalculatorButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_eight" />

        <Button
            android:id="@+id/button9"
            style="@style/CalculatorButton"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_nine" />

        <Button
            android:id="@+id/buttonMulti"
            style="@style/CalculatorButton"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_multiple" />

        <Button
            android:id="@+id/button4"
            style="@style/CalculatorButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_four" />

        <Button
            android:id="@+id/button5"
            style="@style/CalculatorButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_five" />

        <Button
            android:id="@+id/button6"
            style="@style/CalculatorButton"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_six" />

        <Button
            android:id="@+id/buttonSubtract"
            style="@style/CalculatorButton"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_subtract" />

        <Button
            android:id="@+id/button1"
            style="@style/CalculatorButton"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_one" />

        <Button
            android:id="@+id/button2"
            style="@style/CalculatorButton"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_two" />

        <Button
            android:id="@+id/button3"
            style="@style/CalculatorButton"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_three" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/CalculatorButton"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_plus" />

        <Button
            android:id="@+id/buttonNegative"
            style="@style/CalculatorButton"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_negative" />

        <Button
            android:id="@+id/buttonDel"
            style="@style/CalculatorButton"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_delete" />

        <Button
            android:id="@+id/button0"
            style="@style/CalculatorButton"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_zero" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/CalculatorButton"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_dot" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/CalculatorButton"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_4"
            android:backgroundTint="@color/color_hurricane"
            android:text="@string/text_equal" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
